--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "private": true,
     "license": "UNLICENSED",
     "engines": {
-        "node": "18.x"
+        "node": ">=20"
     },
     "scripts": {
         "prebuild": "rimraf dist",
@@ -29,21 +29,21 @@
     },
     "dependencies": {
         "@nestjs-modules/mailer": "^1.11.2",
-        "@nestjs/axios": "^3.0.0",
-        "@nestjs/common": "^10.0.5",
-        "@nestjs/config": "^3.3.0",
-        "@nestjs/core": "^10.0.5",
-        "@nestjs/jwt": "^10.1.0",
-        "@nestjs/mapped-types": "*",
-        "@nestjs/passport": "^10.0.0",
-        "@nestjs/platform-express": "^10.0.5",
-        "@nestjs/platform-socket.io": "^10.0.5",
-        "@nestjs/schedule": "^3.0.4",
-        "@nestjs/serve-static": "^4.0.0",
-        "@nestjs/swagger": "^7.1.1",
-        "@nestjs/terminus": "^10.0.1",
-        "@nestjs/typeorm": "^10.0.0",
-        "@nestjs/websockets": "^10.0.5",
+        "@nestjs/axios": "^4.0.1",
+        "@nestjs/common": "^11.1.6",
+        "@nestjs/config": "^4.0.2",
+        "@nestjs/core": "^11.1.6",
+        "@nestjs/jwt": "^11.0.1",
+        "@nestjs/mapped-types": "^2.1.0",
+        "@nestjs/passport": "^11.0.5",
+        "@nestjs/platform-express": "^11.1.6",
+        "@nestjs/platform-socket.io": "^11.1.6",
+        "@nestjs/schedule": "^6.0.1",
+        "@nestjs/serve-static": "^5.0.4",
+        "@nestjs/swagger": "^11.2.0",
+        "@nestjs/terminus": "^11.0.0",
+        "@nestjs/typeorm": "^11.0.0",
+        "@nestjs/websockets": "^11.1.6",
         "axios": "^1.5.0",
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
@@ -76,9 +76,9 @@
         "webpack": "^5.88.1"
     },
     "devDependencies": {
-        "@nestjs/cli": "^10.1.7",
-        "@nestjs/schematics": "^10.0.1",
-        "@nestjs/testing": "^10.0.5",
+        "@nestjs/cli": "^11.0.10",
+        "@nestjs/schematics": "^11.0.9",
+        "@nestjs/testing": "^11.1.6",
         "@types/bcrypt": "^5.0.0",
         "@types/cron": "^2.0.1",
         "@types/csurf": "^1.11.2",
